# cdb_plugin

./: CMakeLists.txt  README.md  flake.nix  main.cpp
include/: CustomCompilationDatabase.h  Index.h
nix-support/: wrap
src/: CustomCompilationDatabase.cpp  Index.cpp
